--- a/cases/ysds/index.html
+++ b/cases/ysds/index.html
@@ -175,7 +175,7 @@
          data-styled.g60[id="Headerstyle__Cta-sc-11sf5xg-17"]{content:"hvhSAY,"}/*!sc*/
          .gNFoLC{z-index:5;margin-top:auto;}/*!sc*/
          data-styled.g67[id="SideContactFormstyled__Container-sc-xpl7fe-0"]{content:"gNFoLC,"}/*!sc*/
-         .jbaOBC{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:2px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;background-color:#00A69D;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;width:100%;background:#00A69D;color:white;}/*!sc*/
+         .jbaOBC{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:30px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;background-color:#00A69D;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;width:100%;background:#00A69D;color:white;}/*!sc*/
          .jbaOBC svg{-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .jbaOBC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .jbaOBC:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
@@ -183,7 +183,7 @@
          .jbaOBC:hover{background:#00A69D;}/*!sc*/
          .jbaOBC:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
          .jbaOBC:hover{color:white;background:#00A69D;}/*!sc*/
-         .jbaOBC:hover svg path{fill:#B6B5FF;}/*!sc*/
+         .jbaOBC:hover svg path{fill:#0EBAB1;}/*!sc*/
          data-styled.g68[id="SideContactFormstyled__Button-sc-xpl7fe-1"]{content:"jbaOBC,"}/*!sc*/
          .gYoBYn{width:485px;max-width:100%;height:calc(100vh - 50px);position:fixed;top:50px;right:-100%;z-index:120;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;overflow:hidden;background-color:#0C3A53;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
          @media (min-width:680px){.gYoBYn{top:0px;height:100vh;}}/*!sc*/
@@ -224,14 +224,14 @@
          .iSgPVl{width:100%;}/*!sc*/
          @media (min-width:992px){.iSgPVl{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}}/*!sc*/
          data-styled.g84[id="SideContactFormstyled__FormColumn-sc-xpl7fe-17"]{content:"iSgPVl,"}/*!sc*/
-         .cwoHtc{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:48px;margin-bottom:20px;background:#F0F1FA;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:2px;-webkit-font-smoothing:antialiased;z-index:120;}/*!sc*/
+         .cwoHtc{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:48px;margin-bottom:20px;background:#F0F1FA;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:30px;-webkit-font-smoothing:antialiased;z-index:120;}/*!sc*/
          .cwoHtc::-webkit-input-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc::-moz-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc:-ms-input-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc::placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          @media (min-width:680px){.cwoHtc{font-size:18px;margin-bottom:14px;}}/*!sc*/
          data-styled.g87[id="SideContactFormstyled__Input-sc-xpl7fe-20"]{content:"cwoHtc,"}/*!sc*/
-         .bYTiwv{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:130px;background:#F0F1FA;padding:15px;font-size:16px;color:#0C3A53;;border-radius:2px;-webkit-font-smoothing:antialiased;resize:none;z-index:120;}/*!sc*/
+         .bYTiwv{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:130px;background:#F0F1FA;padding:15px;font-size:16px;color:#0C3A53;;border-radius:30px;-webkit-font-smoothing:antialiased;resize:none;z-index:120;}/*!sc*/
          .bYTiwv::-webkit-input-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bYTiwv::-moz-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bYTiwv:-ms-input-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
@@ -247,7 +247,7 @@
          data-styled.g91[id="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24"]{content:"gLyNAr,"}/*!sc*/
          .fmiVnW{margin-left:5px;font-size:14px;-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid #000;color:#0C3A53;;z-index:120;}/*!sc*/
          data-styled.g92[id="SideContactFormstyled__GdprLink-sc-xpl7fe-25"]{content:"fmiVnW,"}/*!sc*/
-         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:2px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
+         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
          .caFxEC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .caFxEC:disabled{opacity:0.7;cursor:not-allowed;}/*!sc*/
          data-styled.g93[id="SideContactFormstyled__SubmitButton-sc-xpl7fe-26"]{content:"caFxEC,"}/*!sc*/
@@ -288,7 +288,7 @@
          .fSjTvY{width:100%;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}/*!sc*/
          @media (min-width:992px){.fSjTvY{width:430px;padding-right:55px;margin-top:-9px;}}/*!sc*/
          data-styled.g446[id="TextRowsstyle__SizeH3-sc-f5buiq-8"]{content:"fSjTvY,"}/*!sc*/
-         .cquguS{margin-bottom:0;opacity:0.9;}/*!sc*/
+         .cquguS{color: white;margin-bottom:0;opacity:0.9;}/*!sc*/
          data-styled.g450[id="TextRowsstyle__Paragraph-sc-f5buiq-12"]{content:"cquguS,"}/*!sc*/
          .jFRVZm{background:#0C3A53;;position:relative;height:550px;overflow:hidden;}/*!sc*/
          @media (min-width:1500px){.jFRVZm{height:760px;}}/*!sc*/
@@ -362,7 +362,7 @@
          data-styled.g534[id="CaseThreestyle__Content-sc-a06umc-9"]{content:"lkFNnp,"}/*!sc*/
          .ooyUk{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:calc(100% + 10px);width:100%;}/*!sc*/
          data-styled.g535[id="CaseThreestyle__Labels-sc-a06umc-10"]{content:"ooyUk,"}/*!sc*/
-         .cdfmzl{color:#ffffff;border:1px solid #ffffff;border-radius:2px;padding:4px 7px;margin-bottom:10px;margin-right:10px;}/*!sc*/
+         .cdfmzl{color:#ffffff;border:1px solid #ffffff;border-radius:30px;padding:4px 7px;margin-bottom:10px;margin-right:10px;}/*!sc*/
          @media (min-width:680px){.cdfmzl{padding:5px 10px;}}/*!sc*/
          data-styled.g536[id="CaseThreestyle__Label-sc-a06umc-11"]{content:"cdfmzl,"}/*!sc*/
          *{box-sizing:border-box;margin:0;padding:0;font-family:"Source Sans Pro",sans-serif;}/*!sc*/
