--- a/kontakta-oss/index.html
+++ b/kontakta-oss/index.html
@@ -174,14 +174,14 @@
          @keyframes headerlink{0%{color:#0EBAB1;}50%{color:#0EBAB1;}100%{color:#0EBAB1;}}/*!sc*/
          @media (min-width:680px){.hvhSAY{right:70px;top:28px;font-size:14px;}}/*!sc*/
          data-styled.g60[id="Headerstyle__Cta-sc-11sf5xg-17"]{content:"hvhSAY,"}/*!sc*/
-         .heGCnB{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:2px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;}/*!sc*/
+         .heGCnB{border-radius: 30px;-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;}/*!sc*/
          .heGCnB:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          data-styled.g61[id="button__btn_large-sc-i59f7s-0"]{content:"heGCnB,"}/*!sc*/
          .dYFiFT{font-size:12px;padding:10px 16px;}/*!sc*/
          data-styled.g63[id="button__btn_mini-sc-i59f7s-2"]{content:"dYFiFT,"}/*!sc*/
          .gNFoLC{z-index:5;margin-top:auto;}/*!sc*/
          data-styled.g67[id="SideContactFormstyled__Container-sc-xpl7fe-0"]{content:"gNFoLC,"}/*!sc*/
-         .jbaOBC{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:2px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;background-color:#00A69D;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;width:100%;background:#00A69D;color:white;}/*!sc*/
+         .jbaOBC{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:30px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;background-color:#00A69D;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;width:100%;background:#00A69D;color:white;}/*!sc*/
          .jbaOBC svg{-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .jbaOBC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .jbaOBC:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
@@ -189,7 +189,7 @@
          .jbaOBC:hover{background:#00A69D;}/*!sc*/
          .jbaOBC:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
          .jbaOBC:hover{color:white;background:#00A69D;}/*!sc*/
-         .jbaOBC:hover svg path{fill:#B6B5FF;}/*!sc*/
+         .jbaOBC:hover svg path{fill:#0EBAB1;}/*!sc*/
          data-styled.g68[id="SideContactFormstyled__Button-sc-xpl7fe-1"]{content:"jbaOBC,"}/*!sc*/
          .gYoBYn{width:485px;max-width:100%;height:calc(100vh - 50px);position:fixed;top:50px;right:-100%;z-index:120;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;overflow:hidden;background-color:#0C3A53;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
          @media (min-width:680px){.gYoBYn{top:0px;height:100vh;}}/*!sc*/
@@ -230,14 +230,14 @@
          .iSgPVl{width:100%;}/*!sc*/
          @media (min-width:992px){.iSgPVl{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}}/*!sc*/
          data-styled.g84[id="SideContactFormstyled__FormColumn-sc-xpl7fe-17"]{content:"iSgPVl,"}/*!sc*/
-         .cwoHtc{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:48px;margin-bottom:20px;background:#F0F1FA;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:2px;-webkit-font-smoothing:antialiased;z-index:120;}/*!sc*/
+         .cwoHtc{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:48px;margin-bottom:20px;background:#F0F1FA;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:30px;-webkit-font-smoothing:antialiased;z-index:120;}/*!sc*/
          .cwoHtc::-webkit-input-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc::-moz-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc:-ms-input-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc::placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          @media (min-width:680px){.cwoHtc{font-size:18px;margin-bottom:14px;}}/*!sc*/
          data-styled.g87[id="SideContactFormstyled__Input-sc-xpl7fe-20"]{content:"cwoHtc,"}/*!sc*/
-         .bYTiwv{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:130px;background:#F0F1FA;padding:15px;font-size:16px;color:#0C3A53;;border-radius:2px;-webkit-font-smoothing:antialiased;resize:none;z-index:120;}/*!sc*/
+         .bYTiwv{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:130px;background:#F0F1FA;padding:15px;font-size:16px;color:#0C3A53;;border-radius:30px;-webkit-font-smoothing:antialiased;resize:none;z-index:120;}/*!sc*/
          .bYTiwv::-webkit-input-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bYTiwv::-moz-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bYTiwv:-ms-input-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
@@ -253,7 +253,7 @@
          data-styled.g91[id="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24"]{content:"gLyNAr,"}/*!sc*/
          .fmiVnW{margin-left:5px;font-size:14px;-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid #000;color:#0C3A53;;z-index:120;}/*!sc*/
          data-styled.g92[id="SideContactFormstyled__GdprLink-sc-xpl7fe-25"]{content:"fmiVnW,"}/*!sc*/
-         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:2px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
+         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
          .caFxEC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .caFxEC:disabled{opacity:0.7;cursor:not-allowed;}/*!sc*/
          data-styled.g93[id="SideContactFormstyled__SubmitButton-sc-xpl7fe-26"]{content:"caFxEC,"}/*!sc*/
@@ -289,7 +289,7 @@
          .hoXDyD{background:#0C3A53;;padding:30px 20px;border-radius:8px;margin-top:40px;-webkit-flex:1;-ms-flex:1;flex:1;}/*!sc*/
          @media (min-width:680px){.hoXDyD{padding:40px;}}/*!sc*/
          data-styled.g113[id="AddressHerostyle__LinkBox-sc-hj46eg-9"]{content:"hoXDyD,"}/*!sc*/
-         .iOCOYE{color:#B6B5FF;margin-bottom:10px;}/*!sc*/
+         .iOCOYE{color:#0EBAB1;margin-bottom:10px;}/*!sc*/
          data-styled.g114[id="AddressHerostyle__LinkSubheader-sc-hj46eg-10"]{content:"iOCOYE,"}/*!sc*/
          .bfKjmT{margin-bottom:0;color:#ffffff;}/*!sc*/
          data-styled.g115[id="AddressHerostyle__LinkSubheaderContent-sc-hj46eg-11"]{content:"bfKjmT,"}/*!sc*/
@@ -297,14 +297,14 @@
          data-styled.g116[id="AddressHerostyle__ButtonLink-sc-hj46eg-12"]{content:"gNCjIc,"}/*!sc*/
          .dzIuRD{margin-bottom:15px;}/*!sc*/
          data-styled.g117[id="AddressHerostyle__FormTitle-sc-hj46eg-13"]{content:"dzIuRD,"}/*!sc*/
-         .bbJicJ{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:55px;margin-bottom:20px;background:none;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:2px;border:1px solid rgba(21,21,21,0.28);-webkit-font-smoothing:antialiased;}/*!sc*/
+         .bbJicJ{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:55px;margin-bottom:20px;background:none;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:30px;border:1px solid rgba(21,21,21,0.28);-webkit-font-smoothing:antialiased;}/*!sc*/
          .bbJicJ::-webkit-input-placeholder,.bbJicJ::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bbJicJ::-moz-placeholder,.bbJicJ::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bbJicJ:-ms-input-placeholder,.bbJicJ::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bbJicJ::placeholder,.bbJicJ::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          @media (min-width:680px){.bbJicJ{font-size:20px;}}/*!sc*/
          data-styled.g121[id="AddressHerostyle__Input-sc-hj46eg-17"]{content:"bbJicJ,"}/*!sc*/
-         .bRRkwU{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:150px;margin-bottom:10px;background:none;padding:15px;font-size:16px;color:#0C3A53;;border-radius:2px;border:1px solid rgba(21,21,21,0.28);-webkit-font-smoothing:antialiased;}/*!sc*/
+         .bRRkwU{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:150px;margin-bottom:10px;background:none;padding:15px;font-size:16px;color:#0C3A53;;border-radius:30px;border:1px solid rgba(21,21,21,0.28);-webkit-font-smoothing:antialiased;}/*!sc*/
          .bRRkwU::-webkit-input-placeholder,.bRRkwU::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bRRkwU::-moz-placeholder,.bRRkwU::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bRRkwU:-ms-input-placeholder,.bRRkwU::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
@@ -317,7 +317,7 @@
          data-styled.g124[id="AddressHerostyle__InputCheckbox-sc-hj46eg-20"]{content:"bfpfSO,"}/*!sc*/
          .lhmMHj{margin-left:5px;font-size:14px;-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid #000;color:#0C3A53;;}/*!sc*/
          data-styled.g125[id="AddressHerostyle__GdprLink-sc-hj46eg-21"]{content:"lhmMHj,"}/*!sc*/
-         .llHMn{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:2px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;}/*!sc*/
+         .llHMn{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;}/*!sc*/
          .llHMn:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .llHMn:disabled{opacity:0.7;cursor:not-allowed;}/*!sc*/
          data-styled.g126[id="AddressHerostyle__SubmitButton-sc-hj46eg-22"]{content:"llHMn,"}/*!sc*/
@@ -331,7 +331,7 @@
          data-styled.g144[id="Contactsstyle__Content-sc-dz4od0-2"]{content:"iTPMlb,"}/*!sc*/
          .eMsAIy{background:#ffffff;border-radius:8px;overflow:hidden;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
          data-styled.g145[id="Contactsstyle__Block-sc-dz4od0-3"]{content:"eMsAIy,"}/*!sc*/
-         .iBcWTq{width:100%;aspect-ratio:1 / 1;border-radius:2px;object-fit:cover;}/*!sc*/
+         .iBcWTq{width:100%;aspect-ratio:1 / 1;border-radius:30px;object-fit:cover;}/*!sc*/
          data-styled.g146[id="Contactsstyle__Image-sc-dz4od0-4"]{content:"iBcWTq,"}/*!sc*/
          .fIJZtn{padding:15px;height:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
          @media (min-width:680px){.fIJZtn{padding:25px;}}/*!sc*/
