--- a/otech-tech/index.html
+++ b/otech-tech/index.html
@@ -213,7 +213,7 @@
          .gNFoLC{z-index:5;margin-top:auto;}/*!sc*/
          .iPuiUE{z-index:5;}/*!sc*/
          data-styled.g67[id="SideContactFormstyled__Container-sc-xpl7fe-0"]{content:"gNFoLC,iPuiUE,"}/*!sc*/
-         .jbaOBC{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:2px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;background-color:#00A69D;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;width:100%;background:#00A69D;color:white;}/*!sc*/
+         .jbaOBC{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:30px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;background-color:#00A69D;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;width:100%;background:#00A69D;color:white;}/*!sc*/
          .jbaOBC svg{-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .jbaOBC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .jbaOBC:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
@@ -221,13 +221,13 @@
          .jbaOBC:hover{background:#00A69D;}/*!sc*/
          .jbaOBC:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
          .jbaOBC:hover{color:white;background:#00A69D;}/*!sc*/
-         .jbaOBC:hover svg path{fill:#B6B5FF;}/*!sc*/
-         .jrQDUp{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:2px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#00A69D;color:white;}/*!sc*/
+         .jbaOBC:hover svg path{fill:#0EBAB1;}/*!sc*/
+         .jrQDUp{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;gap:10px;border-radius:30px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;color:#ffffff;padding:16px 21px;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#00A69D;color:white;}/*!sc*/
          .jrQDUp svg{-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .jrQDUp:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .jrQDUp:hover svg{-webkit-transform:translateX(5px);-ms-transform:translateX(5px);transform:translateX(5px);}/*!sc*/
          .jrQDUp:hover{color:white;background:#00A69D;}/*!sc*/
-         .jrQDUp:hover svg path{fill:#B6B5FF;}/*!sc*/
+         .jrQDUp:hover svg path{fill:#0EBAB1;}/*!sc*/
          data-styled.g68[id="SideContactFormstyled__Button-sc-xpl7fe-1"]{content:"jbaOBC,jrQDUp,"}/*!sc*/
          .gYoBYn{width:485px;max-width:100%;height:calc(100vh - 50px);position:fixed;top:50px;right:-100%;z-index:120;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;overflow:hidden;background-color:#0C3A53;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
          @media (min-width:680px){.gYoBYn{top:0px;height:100vh;}}/*!sc*/
@@ -283,14 +283,14 @@
          .iSgPVl{width:100%;}/*!sc*/
          @media (min-width:992px){.iSgPVl{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}}/*!sc*/
          data-styled.g84[id="SideContactFormstyled__FormColumn-sc-xpl7fe-17"]{content:"iSgPVl,"}/*!sc*/
-         .cwoHtc{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:48px;margin-bottom:20px;background:#F0F1FA;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:2px;-webkit-font-smoothing:antialiased;z-index:120;}/*!sc*/
+         .cwoHtc{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:48px;margin-bottom:20px;background:#F0F1FA;padding-left:15px;font-size:16px;color:#0C3A53;;border-radius:30px;-webkit-font-smoothing:antialiased;z-index:120;}/*!sc*/
          .cwoHtc::-webkit-input-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc::-moz-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc:-ms-input-placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .cwoHtc::placeholder,.cwoHtc::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          @media (min-width:680px){.cwoHtc{font-size:18px;margin-bottom:14px;}}/*!sc*/
          data-styled.g87[id="SideContactFormstyled__Input-sc-xpl7fe-20"]{content:"cwoHtc,"}/*!sc*/
-         .bYTiwv{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:130px;background:#F0F1FA;padding:15px;font-size:16px;color:#0C3A53;;border-radius:2px;-webkit-font-smoothing:antialiased;resize:none;z-index:120;}/*!sc*/
+         .bYTiwv{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;width:100%;height:130px;background:#F0F1FA;padding:15px;font-size:16px;color:#0C3A53;;border-radius:30px;-webkit-font-smoothing:antialiased;resize:none;z-index:120;}/*!sc*/
          .bYTiwv::-webkit-input-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bYTiwv::-moz-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
          .bYTiwv:-ms-input-placeholder,.bYTiwv::-webkit-input-placeholder{color:#0C3A53;;opacity:0.5;}/*!sc*/
@@ -306,7 +306,7 @@
          data-styled.g91[id="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24"]{content:"gLyNAr,"}/*!sc*/
          .fmiVnW{margin-left:5px;font-size:14px;-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid #000;color:#0C3A53;;z-index:120;}/*!sc*/
          data-styled.g92[id="SideContactFormstyled__GdprLink-sc-xpl7fe-25"]{content:"fmiVnW,"}/*!sc*/
-         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:2px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
+         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
          .caFxEC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .caFxEC:disabled{opacity:0.7;cursor:not-allowed;}/*!sc*/
          data-styled.g93[id="SideContactFormstyled__SubmitButton-sc-xpl7fe-26"]{content:"caFxEC,"}/*!sc*/
@@ -437,7 +437,7 @@
          .kFFlzj{color:#ffffff;}/*!sc*/
          .kFFlzj a{-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid #ffffff;color:#ffffff;}/*!sc*/
          data-styled.g704[id="OtechFormstyled__CheckBoxText-sc-syp4t-12"]{content:"kFFlzj,"}/*!sc*/
-         .eODYkQ{cursor:not-allowed;-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:2px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;width:100%;text-align:center;}/*!sc*/
+         .eODYkQ{cursor:not-allowed;-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;width:100%;text-align:center;}/*!sc*/
          @media (min-width:992px){.eODYkQ{width:auto;}}/*!sc*/
          .eODYkQ:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .eODYkQ:disabled{cursor:not-allowed;}/*!sc*/
@@ -658,7 +658,7 @@
                      <div class="OtechHerostyled__Overlay-sc-1qdgf06-7 dDzJYM"></div>
                      <div class="wrapper__main_inner-sc-d7vgux-0 OtechHerostyled__Inner-sc-1qdgf06-1 fhPlTV cYIjW">
                         <div class="text__wysiwyg-sc-1xracbr-16 OtechHerostyled__Title-sc-1qdgf06-2 cMSgBt giyeJx">
-                           <h1><span style="color: #b6b5ff;">O<span style="color: #ffffff;">tech</span> tech är riktigt otäckt.</span></h1>
+                           <h1><span style="color: #0EBAB1;">O<span style="color: #ffffff;">tech</span> tech är riktigt otäckt.</span></h1>
                         </div>
                         <p class="text__paragraph_big-sc-1xracbr-8 OtechHerostyled__Text-sc-1qdgf06-3 JNKLB btyxvq">Tech kan vara alldeles underbart. När det fungerar. Men när du sliter ditt hår, glömmer bort ännu ett lösenord eller vill kasta ut datorn genom fönstret är det inte lika kul.
                            <br/>
@@ -685,7 +685,7 @@
                            <div color="#0C3A53;Default" class="SideContactFormstyled__Button-sc-xpl7fe-1 jrQDUp">
                               boka kostnadsfri rådgivning<!-- --> 
                               <svg width="21" height="12" viewBox="0 0 21 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                 <path d="M20.5303 6.53033C20.8232 6.23744 20.8232 5.76256 20.5303 5.46967L15.7574 0.696701C15.4645 0.403807 14.9896 0.403807 14.6967 0.6967C14.4038 0.989594 14.4038 1.46447 14.6967 1.75736L18.9393 6L14.6967 10.2426C14.4038 10.5355 14.4038 11.0104 14.6967 11.3033C14.9896 11.5962 15.4645 11.5962 15.7574 11.3033L20.5303 6.53033ZM-6.55671e-08 6.75L20 6.75L20 5.25L6.55671e-08 5.25L-6.55671e-08 6.75Z" fill="#B6B5FF"></path>
+                                 <path d="M20.5303 6.53033C20.8232 6.23744 20.8232 5.76256 20.5303 5.46967L15.7574 0.696701C15.4645 0.403807 14.9896 0.403807 14.6967 0.6967C14.4038 0.989594 14.4038 1.46447 14.6967 1.75736L18.9393 6L14.6967 10.2426C14.4038 10.5355 14.4038 11.0104 14.6967 11.3033C14.9896 11.5962 15.4645 11.5962 15.7574 11.3033L20.5303 6.53033ZM-6.55671e-08 6.75L20 6.75L20 5.25L6.55671e-08 5.25L-6.55671e-08 6.75Z" fill="#0EBAB1"></path>
                               </svg>
                            </div>
                         </div>
