--- a/karriar/index.html
+++ b/karriar/index.html
@@ -228,7 +228,7 @@
          data-styled.g81[id="SideContactFormstyled__ContactText-sc-xpl7fe-14"]{content:"ipDxdU,"}/*!sc*/
          .iWzDEv{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;gap:25px;}/*!sc*/
          data-styled.g82[id="SideContactFormstyled__ContactInfoWrapper-sc-xpl7fe-15"]{content:"iWzDEv,"}/*!sc*/
-         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#d4d3ff;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
+         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#0EBAB1;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .egvMye:hover{color:white;}/*!sc*/
          data-styled.g83[id="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16"]{content:"egvMye,"}/*!sc*/
          .iSgPVl{width:100%;}/*!sc*/
@@ -373,7 +373,7 @@
          @media (min-width:680px){.jTEywG{padding:25px;padding-bottom:23px;}}/*!sc*/
          .jTEywG:after{-webkit-filter:invert(1);filter:invert(1);content:"";width:14px;height:20px;background-image:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAxNiAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTAgNy40NTM5M0w4LjI3NTg2IDExLjk0NzlWMTJMMCAxNi4zMzc2TDAgMjRMMTYgMTUuMTcyMlY4LjgyNzhMMCAwTDAgNy40NTM5M1oiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=");display:inline-block;background-size:contain;background-repeat:no-repeat;background-position:center;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;margin-left:20px;}/*!sc*/
          .jTEywG:hover:after{-webkit-transform:translateX(7px);-ms-transform:translateX(7px);transform:translateX(7px);}/*!sc*/
-         .hAEiMh{background:#D4D3FF;padding:20px;padding-bottom:18px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-text-decoration:none;text-decoration:none;border-radius:8px;margin-bottom:20px;}/*!sc*/
+         .hAEiMh{background:#0EBAB1;padding:20px;padding-bottom:18px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;-webkit-text-decoration:none;text-decoration:none;border-radius:8px;margin-bottom:20px;}/*!sc*/
          .hAEiMh:last-of-type{margin-bottom:0;}/*!sc*/
          @media (min-width:680px){.hAEiMh{padding:25px;padding-bottom:23px;}}/*!sc*/
          .hAEiMh:after{-webkit-filter:invert(1);filter:invert(1);content:"";width:14px;height:20px;background-image:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAxNiAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTAgNy40NTM5M0w4LjI3NTg2IDExLjk0NzlWMTJMMCAxNi4zMzc2TDAgMjRMMTYgMTUuMTcyMlY4LjgyNzhMMCAwTDAgNy40NTM5M1oiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=");display:inline-block;background-size:contain;background-repeat:no-repeat;background-position:center;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;margin-left:20px;}/*!sc*/
@@ -381,7 +381,7 @@
          data-styled.g248[id="OpenPositionsstyle__Block-sc-ege0t9-4"]{content:"jTEywG,hAEiMh,"}/*!sc*/
          .ctMZjt{margin-bottom:0;color:#0C3A53;;-webkit-text-decoration:none;text-decoration:none;}/*!sc*/
          data-styled.g249[id="OpenPositionsstyle__Text-sc-ege0t9-5"]{content:"ctMZjt,"}/*!sc*/
-         .fVmClI{-webkit-text-decoration:none;text-decoration:none;color:#00A69D;font-size:16px;margin:0;margin-top:4px;}/*!sc*/
+         .fVmClI{color:#0C3A53 !important; -webkit-text-decoration:none;text-decoration:none;color:#00A69D;font-size:16px;margin:0;margin-top:4px;}/*!sc*/
          @media (min-width:680px){.fVmClI{margin-top:6px;}}/*!sc*/
          data-styled.g250[id="OpenPositionsstyle__Detail-sc-ege0t9-6"]{content:"fVmClI,"}/*!sc*/
          .ibOEJW{margin:0 auto;}/*!sc*/
@@ -550,6 +550,8 @@
       <link rel="apple-touch-icon" sizes="384x384" href="../icons/icon-384x384.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="apple-touch-icon" sizes="512x512" href="../icons/icon-512x512.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="sitemap" type="application/xml" href="../sitemap/sitemap-index.xml"/>
+      <link rel="stylesheet" href="/style.css">
+      <script src="/main.js"></script>
    </head>
    <body>
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD2PNK5" height="0" width="0" style="display: none; visibility: hidden" aria-hidden="true"></iframe></noscript>
@@ -589,7 +591,7 @@
                         <div class="Headerstyle__MenuOverlay-sc-11sf5xg-7 flOqsc"></div>
                      </aside>
                      <div class="Headerstyle__Sidebar-sc-11sf5xg-9 jNlDeF">
-                        <div class="Headerstyle__Hamburger-sc-11sf5xg-4 dzplXw">
+                        <div class="Headerstyle__Hamburger-sc-11sf5xg-5 dzplXw">
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
