--- a/cases/24-duty/index.html
+++ b/cases/24-duty/index.html
@@ -21,6 +21,8 @@
       <noscript>
          <style>.gatsby-image-wrapper noscript [data-main-image]{opacity:1!important}.gatsby-image-wrapper [data-placeholder-image]{opacity:0!important}</style>
       </noscript>
+      <script src="/main.js"></script>
+      <link rel="stylesheet" href="/style.css">
       <script type="module">const e="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;e&&document.body.addEventListener("load",(function(e){const t=e.target;if(void 0===t.dataset.mainImage)return;if(void 0===t.dataset.gatsbyImageSsr)return;let a=null,n=t;for(;null===a&&n;)void 0!==n.parentNode.dataset.gatsbyImageWrapper&&(a=n.parentNode),n=n.parentNode;const o=a.querySelector("[data-placeholder-image]"),r=new Image;r.src=t.currentSrc,r.decode().catch((()=>{})).then((()=>{t.style.opacity=1,o&&(o.style.opacity=0,o.style.transition="opacity 500ms linear")}))}),!0);</script>
       <style data-styled="" data-styled-version="5.3.11">.kAxvFw{position:relative;min-height:100vh;background-color:#F0F1FA;}/*!sc*/
          @media (min-width:680px){.kAxvFw{width:calc(100% - 70px);margin-left:70px;}}/*!sc*/
@@ -218,7 +220,7 @@
          data-styled.g81[id="SideContactFormstyled__ContactText-sc-xpl7fe-14"]{content:"ipDxdU,"}/*!sc*/
          .iWzDEv{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;gap:25px;}/*!sc*/
          data-styled.g82[id="SideContactFormstyled__ContactInfoWrapper-sc-xpl7fe-15"]{content:"iWzDEv,"}/*!sc*/
-         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#d4d3ff;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
+         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#0EBAB1;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .egvMye:hover{color:white;}/*!sc*/
          data-styled.g83[id="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16"]{content:"egvMye,"}/*!sc*/
          .iSgPVl{width:100%;}/*!sc*/
@@ -263,7 +265,7 @@
          @media (min-width:992px){.eGjaET{padding:100px 0;}}/*!sc*/
          .cvwCDS{background:#F0F1FA;padding:0;}/*!sc*/
          @media (min-width:992px){.cvwCDS{padding:0;}}/*!sc*/
-         .ciddPI{background:#D4D3FF;padding:60px 0;}/*!sc*/
+         .ciddPI{background:#0EBAB1;padding:60px 0;}/*!sc*/
          @media (min-width:992px){.ciddPI{padding:100px 0;}}/*!sc*/
          data-styled.g161[id="background__bg_themed-sc-as3htg-0"]{content:"eGjaET,cvwCDS,ciddPI,"}/*!sc*/
          .foTMNP{margin:60px auto;}/*!sc*/
