--- a/cases/vass/index.html
+++ b/cases/vass/index.html
@@ -221,7 +221,7 @@
          data-styled.g81[id="SideContactFormstyled__ContactText-sc-xpl7fe-14"]{content:"ipDxdU,"}/*!sc*/
          .iWzDEv{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;gap:25px;}/*!sc*/
          data-styled.g82[id="SideContactFormstyled__ContactInfoWrapper-sc-xpl7fe-15"]{content:"iWzDEv,"}/*!sc*/
-         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#d4d3ff;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
+         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#0EBAB1;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .egvMye:hover{color:white;}/*!sc*/
          data-styled.g83[id="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16"]{content:"egvMye,"}/*!sc*/
          .iSgPVl{width:100%;}/*!sc*/
@@ -264,7 +264,7 @@
          data-styled.g103[id="Sidebarstyle__Title-sc-15kdzzt-1"]{content:"kBomLS,"}/*!sc*/
          .cvwCDS{background:#F0F1FA;padding:0;}/*!sc*/
          @media (min-width:992px){.cvwCDS{padding:0;}}/*!sc*/
-         .ciddPI{background:#D4D3FF;padding:60px 0;}/*!sc*/
+         .ciddPI{background:#0EBAB1;padding:60px 0;}/*!sc*/
          @media (min-width:992px){.ciddPI{padding:100px 0;}}/*!sc*/
          data-styled.g161[id="background__bg_themed-sc-as3htg-0"]{content:"cvwCDS,ciddPI,"}/*!sc*/
          .jaXRgE{max-width:1000px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
@@ -378,6 +378,8 @@
       <link rel="apple-touch-icon" sizes="384x384" href="../../icons/icon-384x384.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="apple-touch-icon" sizes="512x512" href="../../icons/icon-512x512.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="sitemap" type="application/xml" href="../../sitemap/sitemap-index.xml"/>
+      <link rel="stylesheet" href="/style.css">
+      <script src="/main.js"></script>
    </head>
    <body>
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD2PNK5" height="0" width="0" style="display: none; visibility: hidden" aria-hidden="true"></iframe></noscript>
@@ -417,7 +419,7 @@
                         <div class="Headerstyle__MenuOverlay-sc-11sf5xg-7 flOqsc"></div>
                      </aside>
                      <div class="Headerstyle__Sidebar-sc-11sf5xg-9 jNlDeF">
-                        <div class="Headerstyle__Hamburger-sc-11sf5xg-4 dzplXw">
+                        <div class="Headerstyle__Hamburger-sc-11sf5xg-5 dzplXw">
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
