--- a/karriar/linda/index.html
+++ b/karriar/linda/index.html
@@ -230,7 +230,7 @@
          data-styled.g81[id="SideContactFormstyled__ContactText-sc-xpl7fe-14"]{content:"ipDxdU,"}/*!sc*/
          .iWzDEv{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;gap:25px;}/*!sc*/
          data-styled.g82[id="SideContactFormstyled__ContactInfoWrapper-sc-xpl7fe-15"]{content:"iWzDEv,"}/*!sc*/
-         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#d4d3ff;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
+         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#0EBAB1;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .egvMye:hover{color:white;}/*!sc*/
          data-styled.g83[id="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16"]{content:"egvMye,"}/*!sc*/
          .iSgPVl{width:100%;}/*!sc*/
@@ -271,7 +271,7 @@
          .kBomLS{-webkit-transform:rotate(-90deg);-ms-transform:rotate(-90deg);transform:rotate(-90deg);white-space:nowrap;position:absolute;bottom:15px;left:33px;margin:0;-webkit-transform-origin:left;-ms-transform-origin:left;transform-origin:left;color:white;display:none;}/*!sc*/
          @media (min-width:680px){.kBomLS{display:block;}}/*!sc*/
          data-styled.g103[id="Sidebarstyle__Title-sc-15kdzzt-1"]{content:"kBomLS,"}/*!sc*/
-         .ciddPI{background:#D4D3FF;padding:60px 0;}/*!sc*/
+         .ciddPI{background:#0EBAB1;padding:60px 0;}/*!sc*/
          @media (min-width:992px){.ciddPI{padding:100px 0;}}/*!sc*/
          .fJwvhC{background:#00A69D;padding:60px 0;}/*!sc*/
          @media (min-width:992px){.fJwvhC{padding:100px 0;}}/*!sc*/
@@ -379,6 +379,8 @@
       <link rel="apple-touch-icon" sizes="384x384" href="../../icons/icon-384x384.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="apple-touch-icon" sizes="512x512" href="../../icons/icon-512x512.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="sitemap" type="application/xml" href="../../sitemap/sitemap-index.xml"/>
+      <link rel="stylesheet" href="/style.css">
+      <script src="/main.js"></script>
    </head>
    <body>
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD2PNK5" height="0" width="0" style="display: none; visibility: hidden" aria-hidden="true"></iframe></noscript>
@@ -418,7 +420,7 @@
                         <div class="Headerstyle__MenuOverlay-sc-11sf5xg-7 flOqsc"></div>
                      </aside>
                      <div class="Headerstyle__Sidebar-sc-11sf5xg-9 jNlDeF">
-                        <div class="Headerstyle__Hamburger-sc-11sf5xg-4 dzplXw">
+                        <div class="Headerstyle__Hamburger-sc-11sf5xg-5 dzplXw">
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
