--- a/var-story/index.html
+++ b/var-story/index.html
@@ -219,7 +219,7 @@
          data-styled.g81[id="SideContactFormstyled__ContactText-sc-xpl7fe-14"]{content:"ipDxdU,"}/*!sc*/
          .iWzDEv{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;gap:25px;}/*!sc*/
          data-styled.g82[id="SideContactFormstyled__ContactInfoWrapper-sc-xpl7fe-15"]{content:"iWzDEv,"}/*!sc*/
-         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#d4d3ff;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
+         .egvMye{font-family:"Source Sans Pro";font-style:normal;font-weight:400;font-size:16px;line-height:165%;color:#0EBAB1;-webkit-text-decoration:none;text-decoration:none;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;}/*!sc*/
          .egvMye:hover{color:white;}/*!sc*/
          data-styled.g83[id="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16"]{content:"egvMye,"}/*!sc*/
          .iSgPVl{width:100%;}/*!sc*/
@@ -311,9 +311,9 @@
          .kYIXlp{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;position:relative;}/*!sc*/
          .kYIXlp svg{position:absolute;top:-100px;left:50%;height:calc(100% + 200px);-webkit-transform:translateX(-1px);-ms-transform:translateX(-1px);transform:translateX(-1px);}/*!sc*/
          data-styled.g493[id="Timelinestyle__Content-sc-167vkr8-1"]{content:"kYIXlp,"}/*!sc*/
-         .heZdsi{width:16px;height:16px;border-radius:20px;background:purple;position:absolute;top:-100px;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:#00A69D;z-index:2;}/*!sc*/
+         .heZdsi{width:16px;height:16px;border-radius:30px;background:purple;position:absolute;top:-100px;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:#00A69D;z-index:2;}/*!sc*/
          data-styled.g494[id="Timelinestyle__StartPoint-sc-167vkr8-2"]{content:"heZdsi,"}/*!sc*/
-         .jeywgw{width:16px;height:16px;border-radius:20px;background:purple;position:absolute;bottom:-100px;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:#00A69D;z-index:2;}/*!sc*/
+         .jeywgw{width:16px;height:16px;border-radius:30px;background:purple;position:absolute;bottom:-100px;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:#00A69D;z-index:2;}/*!sc*/
          data-styled.g495[id="Timelinestyle__EndPoint-sc-167vkr8-3"]{content:"jeywgw,"}/*!sc*/
          .fngNTo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-webkit-justify-content:flex-end;-ms-flex-pack:end;justify-content:flex-end;margin-bottom:40px;position:relative;}/*!sc*/
          .fngNTo:last-of-type{margin-bottom:0;}/*!sc*/
@@ -366,6 +366,8 @@
       <link rel="apple-touch-icon" sizes="384x384" href="../icons/icon-384x384.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="apple-touch-icon" sizes="512x512" href="../icons/icon-512x512.png@v=e607ec5d29294ef9194c47d59c130c16"/>
       <link rel="sitemap" type="application/xml" href="../sitemap/sitemap-index.xml"/>
+      <link rel="stylesheet" href="/style.css">
+      <script src="/main.js"></script>
    </head>
    <body>
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD2PNK5" height="0" width="0" style="display: none; visibility: hidden" aria-hidden="true"></iframe></noscript>
@@ -405,7 +407,7 @@
                         <div class="Headerstyle__MenuOverlay-sc-11sf5xg-7 flOqsc"></div>
                      </aside>
                      <div class="Headerstyle__Sidebar-sc-11sf5xg-9 jNlDeF">
-                        <div class="Headerstyle__Hamburger-sc-11sf5xg-4 dzplXw">
+                        <div class="Headerstyle__Hamburger-sc-11sf5xg-5 dzplXw">
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                            <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
