--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                                  </div>
                               </div>
                            </a>
-                           <a href="vara-tjanster/apputveckling/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="vara-tjanster/apputveckling/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Apputveckling</h3>
                                  <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi utvecklar både native appar (för iOS och Android), webbappar (PWA) och hybridappar. Vi hjälper dig att hitta rätt väg för att nå dina mål och samtidigt uppfylla dina användares behov.</p>
@@ -716,7 +716,7 @@
                                  </div>
                               </div>
                            </a>
-                           <a href="vara-tjanster/ui-ux-design/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="vara-tjanster/ui-ux-design/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">UX/UI-design</h3>
                                  <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Bakom bra tech ligger riktigt bra design. Våra designers är specialiserade på digital design. Vi vet vad som förväntas av användarna och ser till att din produkt lever upp till det, både när det kommer till funktion, färg och form.</p>
