--- a/vara-tjanster/anlita-ett-tech-team/index.html
+++ b/vara-tjanster/anlita-ett-tech-team/index.html
@@ -524,7 +524,7 @@
                         </div>
                      </div>
                   </section>
-                  <section id="text-rows" class="background__bg_themed-sc-as3htg-0 TextRowsstyle__Background-sc-f5buiq-0 cvwCDS">
+                  <section id="text-rows" class="background__bg_themed-sc-as3htg-0 TextRowsstyle__Background-sc-f5buiq-0 cvwCDS" style="background-color: #0EBAB1; margin: 0;padding: 100px 0;">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextRowsstyle__MainInner-sc-f5buiq-1 fhPlTV foTMNP">
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Tech-team as a Service</h3>
