add videos and remove sections

--- a/vart-manifest/index.html
+++ b/vart-manifest/index.html
@@ -998,7 +998,7 @@
                         </div>
                      </div>
                   </div>
-                  <section id="work-with-us" class="WorkWithUsContentstyle__Section-sc-6lqm97-0 ijVKGz">
+                  <!-- <section id="work-with-us" class="WorkWithUsContentstyle__Section-sc-6lqm97-0 ijVKGz">
                      <div class="wrapper__main_inner-sc-d7vgux-0 WorkWithUsContentstyle__MainInner-sc-6lqm97-1 fhPlTV ctWWTu">
                         <div class="WorkWithUsContentstyle__Content-sc-6lqm97-2 ehYPKN">
                            <h2 class="text__heading_xl-sc-1xracbr-2 WorkWithUsContentstyle__Header-sc-6lqm97-3 dDQFpA geWNaJ">Vill du bli en del av oss?</h2>
@@ -1040,7 +1040,7 @@
                            </div>
                         </div>
                      </div>
-                  </section>
+                  </section> -->
                </main>
                <footer class="Footerstyle__Footer-sc-3wf7fx-0 bkgkIy">
                   <div class="wrapper__main_inner-sc-d7vgux-0 Footerstyle__MainInner-sc-3wf7fx-1 fhPlTV gapTtW">
