--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
          .bMjjZJ{z-index:1;font-weight:bold;font-size:28px;line-height:1.4;-webkit-letter-spacing:0.02em;-moz-letter-spacing:0.02em;-ms-letter-spacing:0.02em;letter-spacing:0.02em;margin-bottom:10px;color:#0C3A53;;}/*!sc*/
          @media (min-width:680px){.bMjjZJ{font-size:38px;-webkit-letter-spacing:0.03em;-moz-letter-spacing:0.03em;-ms-letter-spacing:0.03em;letter-spacing:0.03em;}}/*!sc*/
          data-styled.g5[id="text__heading_lg-sc-1xracbr-3"]{content:"bMjjZJ,"}/*!sc*/
-         .iehGeS{z-index:1;font-weight:bold;font-size:20px;line-height:1.2;-webkit-letter-spacing:0.02em;-moz-letter-spacing:0.02em;-ms-letter-spacing:0.02em;letter-spacing:0.02em;margin-bottom:10px;color:#0C3A53;;}/*!sc*/
+         .iehGeS{z-index:1;font-weight:bold;font-size:20px;line-height:1.2;-webkit-letter-spacing:0.02em;-moz-letter-spacing:0.02em;-ms-letter-spacing:0.02em;letter-spacing:0.02em;margin-bottom:10px;color:white;}/*!sc*/
+
          @media (min-width:680px){.iehGeS{font-size:25px;}}/*!sc*/
          data-styled.g7[id="text__heading_sm-sc-1xracbr-5"]{content:"iehGeS,"}/*!sc*/
          .XPBsz{z-index:1;font-size:inherit;line-height:1.65;-webkit-letter-spacing:0.03em;-moz-letter-spacing:0.03em;-ms-letter-spacing:0.03em;letter-spacing:0.03em;font-size:16px;color:#0C3A53;;}/*!sc*/
@@ -52,7 +53,7 @@
          @media (min-width:680px){.JNKLB{font-size:20px;}}/*!sc*/
          @media (min-width:680px){.JNKLB{font-size:24px;}}/*!sc*/
          data-styled.g10[id="text__paragraph_big-sc-1xracbr-8"]{content:"JNKLB,"}/*!sc*/
-         .ksIOdr{z-index:1;font-size:18px;line-height:1.65;margin-bottom:10px;-webkit-font-smoothing:antialiased;color:#0C3A53;;}/*!sc*/
+         .ksIOdr{z-index:1;font-size:18px;line-height:1.65;margin-bottom:10px;-webkit-font-smoothing:antialiased;color:white;}/*!sc*/
          @media (min-width:680px){.ksIOdr{font-size:20px;}}/*!sc*/
          @media (min-width:680px){.ksIOdr{font-size:16px;}}/*!sc*/
          data-styled.g11[id="text__paragraph_small-sc-1xracbr-9"]{content:"ksIOdr,"}/*!sc*/
@@ -213,7 +214,7 @@
          data-styled.g71[id="SideContactFormstyled__TextFormContainer-sc-xpl7fe-4"]{content:"jhmINn,"}/*!sc*/
          .qYfOQ{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}/*!sc*/
          data-styled.g72[id="SideContactFormstyled__InnerFormWrapper-sc-xpl7fe-5"]{content:"qYfOQ,"}/*!sc*/
-         .gifEzQ{position:absolute;top:-8px;right:0px;background-color:transparent;border:none;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;padding:23px;z-index:999;}/*!sc*/
+         .gifEzQ{position:absolute;top:-8px;right:13px;background-color:transparent;border:none;cursor:pointer;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;padding:23px;z-index:999;}/*!sc*/
          .gifEzQ:hover div:nth-child(1),.gifEzQ:hover div:nth-child(2){border:1px solid #0EBAB1;}/*!sc*/
          data-styled.g73[id="SideContactFormstyled__CloseButton-sc-xpl7fe-6"]{content:"gifEzQ,"}/*!sc*/
          .iZLgRX{position:fixed;top:0;left:0;width:100%;height:100%;background-color:transparent;z-index:90;opacity:0;visibility:hidden;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;display:none;}/*!sc*/
@@ -265,9 +266,9 @@
          data-styled.g90[id="SideContactFormstyled__CheckBoxWrapper-sc-xpl7fe-23"]{content:"kQWdyq,"}/*!sc*/
          .gLyNAr{height:26px;width:26px;z-index:120;position:absolute;left:0;top:0;border:none;}/*!sc*/
          data-styled.g91[id="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24"]{content:"gLyNAr,"}/*!sc*/
-         .fmiVnW{margin-left:5px;font-size:14px;-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid #000;color:#0C3A53;;z-index:120;}/*!sc*/
+         .fmiVnW{margin-left:5px;font-size:14px;-webkit-text-decoration:none;text-decoration:none;border-bottom:1px solid white;color:white;;z-index:120;}/*!sc*/
          data-styled.g92[id="SideContactFormstyled__GdprLink-sc-xpl7fe-25"]{content:"fmiVnW,"}/*!sc*/
-         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#0C3A53;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
+         .caFxEC{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;border-radius:30px;font-weight:bold;font-size:14px;line-height:1.2;-webkit-letter-spacing:0.26em;-moz-letter-spacing:0.26em;-ms-letter-spacing:0.26em;letter-spacing:0.26em;text-transform:uppercase;font-family:"Source Sans Pro",sans-serif;-webkit-text-decoration:none;text-decoration:none;display:inline-block;margin-top:30px;-webkit-transition:all 0.2s ease;transition:all 0.2s ease;background:#00A69D;;color:#ffffff;padding:16px 21px;cursor:pointer;margin-top:6px;width:-webkit-fit-content;width:-moz-fit-content;width:fit-content;z-index:120;}/*!sc*/
          .caFxEC:hover{background:#00A69D;color:#ffffff;}/*!sc*/
          .caFxEC:disabled{opacity:0.7;cursor:not-allowed;}/*!sc*/
          data-styled.g93[id="SideContactFormstyled__SubmitButton-sc-xpl7fe-26"]{content:"caFxEC,"}/*!sc*/
@@ -584,7 +585,7 @@
                            <div class="SideContactFormstyled__FormWrapper-sc-xpl7fe-2 gYoBYn">
                               <div class="SideContactFormstyled__TextFormContainer-sc-xpl7fe-4 jhmINn">
                                  <button class="SideContactFormstyled__CloseButton-sc-xpl7fe-6 gifEzQ">
-                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="white" xmlns="http://www.w3.org/2000/svg">
                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.666656 15.6665L2.33331 17.3331L8.99991 10.6665L15.6666 17.3332L17.3333 15.6665L10.6666 8.99986L17.3333 2.33317L15.6666 0.666504L8.99991 7.3332L2.33328 0.666582L0.666626 2.33324L7.33325 8.99986L0.666656 15.6665Z" fill="#0C3A53;"></path>
                                     </svg>
                                  </button>
@@ -1073,19 +1074,8 @@
          </div>
       <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div>
       </div>
-      <!-- <script>
-         document.addEventListener('DOMContentLoaded', function() {
-             // Get the elements
-             const hamburgerIcon = document.querySelector('.Headerstyle__Hamburger-sc-11sf5xg-4');
-             const sidebarMenu = document.querySelector('.Headerstyle__SidebarMenu-sc-11sf5xg-10');
-         
-             // Add click event listener to the hamburger icon
-             hamburgerIcon.addEventListener('click', function() {
-                 // Toggle the class to show/hide the navigation menu
-                 sidebarMenu.classList.toggle('Headerstyle__SidebarMenu--open');
-             });
-         });
-         </script> -->
+   
+       
       <script src="/main.js"></script>
       <script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/";window.___webpackCompilationHash="6eca5ca3beedc7450e8c";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-752e2013a31fa14e7eac.js"],"app":["/app-40c35b496b3ab4a12bd3.js"],"gatsby-plugin-image":["/gatsby-plugin-image-e0257f4cbe694c90b7ba.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx-94cf5e3edf63eec8bb55.js"],"component---src-templates-news-tsx":["/component---src-templates-news-tsx-86f9f5d83b324bc34c0e.js"],"component---src-templates-page-tsx":["/component---src-templates-page-tsx-2f281419ac9369c01938.js"]};/*]]>*/</script><script src="polyfill-752e2013a31fa14e7eac.js" nomodule=""></script><script src="app-40c35b496b3ab4a12bd3.js" async=""></script><script src="dc6a8720040df98778fe970bf6c000a41750d3ae-a3cb1a49be3896b12e36.js" async=""></script><script src="framework-ab0eeed1aa5464a561cf.js" async=""></script><script src="webpack-runtime-710d81178e1f209a136c.js" async=""></script>
    </body>
